--- a/companyproject/about.html
+++ b/companyproject/about.html
@@ -27,7 +27,7 @@
                         <li class="submenu-link">Submenu3</li>
                     </ul>
                 </div>
-                <div class="link Contacts"><a href="./contact.html">Contact</a></div>
+                <div class="link Contacts"><a href="./contact.html">Contact Us</a></div>
             </div>
 
         </nav>
@@ -88,6 +88,7 @@
         </div>
     </div>
     <script src="./js/index.js"></script>
+
 
 </body>
 
